# myquat

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cloud_config.toml.example  myquat_config.toml
benches/: fermion_transform_benchmarks.rs  gate_benchmarks.rs
data/: trotter_templates.json
docs/: mymat-ndarray-replacement-evaluation.md  mysym-symbolica-replacement-evaluation.md
examples/: EXAMPLES_INDEX.CN.md  EXAMPLES_INDEX.md  accuracy_debug.rs  adaptive_optimization_demo.rs  adaptive_trotter_demo.rs  angular_momentum_demo.rs  backend_integration_demo.rs  beginner_tutorial.rs  bell_state.rs  benchmark_hamiltonian.rs  chapter2_stationary_states.rs  chemistry_demo.rs  cloud_backend_demo.rs  cloud_config_demo.rs  compare_strategies.rs  cross_step_bench.rs  cuda_demo.rs  debug_bc_unitary.rs  debug_kak_coeffs.rs  debug_synthesis.rs  deoptimization_demo.rs  device_topology_demo.rs  diagnose_all_strategies.rs  diagnose_magic_basis.rs  diagnose_pauli_overhead.rs  diagnose_pauli_vs_gate.rs  diagnose_regression.rs  easy_api_demo.rs  error_handling_demo.rs  error_mitigation_demo.rs  extended_gates_demo.rs  extended_qasm_demo.rs  gap_analysis.rs  gate_budget_analysis.rs  gatefusion_bench.rs  gpu_acceleration_demo.rs  grover_enhanced.rs  h2_full_comparison.rs  hamiltonian_demo.rs  hamiltonian_forward_demo.rs  (+45 more)
examples/teaching_demos/: 03_comprehensive_gates.rs  06_hamiltonian_backward.rs  08_vqe_chemistry.rs  QUICK_START.md  README.md  README_CN.md  test_all.sh
experiments/framework_benchmarks/: run_baseline.py
experiments/reverse_hamiltonian_extraction/: exp01_trotter_detection.rs  exp02_hamiltonian_extraction.rs  exp03_deoptimization_pipeline.rs  exp04_vqe_recognition.rs  exp05_qdrift_detection.rs  exp06_scalability.rs  exp07_noise_robustness.rs  generate_report.py  run_all.sh
experiments/tket_comparison/: benchmark_vs_tket.py
framework_benchmarks/: README.md  requirements.txt  run_baseline.py  smoke_test_paulihedral.py  smoke_test_pennylane_depth.py
framework_benchmarks/archive_202601/: accuracy_verification.py  compare_qwc_grouping.py  comprehensive_baseline.py  comprehensive_comparison.py  result.md  run_benchmarks.py  run_comparison.sh  setup.sh  test_myquat_fix.py  verify_accuracy.py  verify_expansion.py  verify_myquat_h2.py  verify_qiskit_apis.py  verify_synthesis.py
framework_benchmarks/results/: baseline_20260517_174717.csv  baseline_20260517_174717.json  baseline_20260517_174717_report.md  baseline_20260517_192616.csv  baseline_20260517_192616.json  baseline_20260517_192616_report.md  baseline_20260517_214919.csv  baseline_20260517_214919.json  baseline_20260517_214919_report.md  baseline_20260518_102436.csv  baseline_20260518_102436.json  baseline_20260518_102436_report.md  baseline_20260518_103033.csv  baseline_20260518_103033.json  baseline_20260518_103033_report.md  baseline_20260518_104044.csv  baseline_20260518_104044.json  baseline_20260518_104044_report.md  baseline_20260518_111205.csv  baseline_20260518_111205.json  (+22 more)
scripts/: ci_benchmark.rs  run_all_benchmarks.sh  run_benchmark.py  run_deopt_benchmark.rs
src/: adaptive_optimizer.rs  benchmarks.rs  circuit.rs  circuit_analyzer.rs  circuit_optimization.rs  circuit_optimized.rs  circuit_optimizer.rs  clifford_tableau.rs  cnot_optimizer.rs  conditional.rs  custom_gate_matrix.rs  density_matrix.rs  device_topology.rs  easy_api.rs  error.rs  error_handling.rs  error_mitigation.rs  gate_decomposition.rs  gate_expansion.rs  gate_inverse.rs  gate_library.rs  gates.rs  gates_extended.rs  hardware_constraints.rs  lib.rs  matrix_cache.rs  measurement_stats.rs  memory_optimized.rs  memory_pool.rs  mod.rs  noise_models.rs  noisy_simulator.rs  optimization_passes.rs  parameter.rs  parity_synth.rs  performance_config.rs  phase_polynomial.rs  qasm.rs  quantum_info.rs  regression_detector.rs  (+8 more)
tests/: backend_comparison_tests.rs  circuit_optimization_integration.rs  comprehensive_gates_test.rs  compute_backend_integration_test.rs  fermion_hamiltonian_tests.rs  large_scale_state_tests.rs  performance_benchmarks.rs  perturbation_theory_tests.rs  phase_estimation_integration.rs  qasm_interoperability.rs  qasm_r_gate_export.rs  qm_analytical_validation.rs  quantum_info_extended_tests.rs  symbolic_comparison_tests.rs  symbolic_computation_tests.rs  test_deoptimization.rs  vqe_benchmarks.rs
(+158 files in other folders)
